--- a/usaspending_api/etl/es_mapper.json
+++ b/usaspending_api/etl/es_mapper.json
@@ -16,63 +16,105 @@
   "mappings": {
     "transaction_mapping": {
       "properties": {
+        "transaction_id": {
+          "type": "integer"
+        },
+        "detached_award_proc_unique": {
+          "type": "text"
+        },
+        "afa_generated_unique":{
+          "type": "text"
+        },
+        "generated_unique_transaction_id":{
+          "type": "text"
+        },
+        "type": {
+          "type": "text"
+        },
+        "pulled_from": {
+          "type": "text"
+        },
+        "type_description": {
+          "fielddata": true,
+          "type": "text"
+        },
+        "action_date": {
+          "format": "yyyy-MM-dd",
+          "type": "date"
+        },
+        "transaction_fiscal_year": {
+          "type": "integer"
+        },
+        "award_fiscal_year": {
+          "type": "integer"
+        },
+        "award_id": {
+          "type": "integer"
+        },
+        "award_amount": {
+          "scaling_factor": 100,
+          "type": "scaled_float"
+        },
+        "transaction_amount": {
+          "scaling_factor": 100,
+          "type": "scaled_float"
+        },
+        "awarding_subtier_agency_abbreviation": {
+          "index": false,
+          "type": "text"
+        },
         "awarding_subtier_agency_name": {
           "fielddata": true,
           "type": "text"
         },
         "awarding_toptier_agency_name": {
-          "type": "text",
-          "fielddata": true
-        },
-        "action_date": {
-          "type": "date",
-          "format": "yyyy-MM-dd"
-        },
-        "period_of_performance_start_date": {
-          "type": "date",
-          "format": "yyyy-MM-dd"
-        },
-        "period_of_performance_current_end_date": {
-          "type": "date",
-          "format": "yyyy-MM-dd"
-        },
-        "award_id": {
-          "type": "integer"
-        },
-        "transaction_id": {
-          "type": "integer"
-        },
-        "total_obligation": {
-          "type": "float"
-        },
-        "session_id": {
-          "type": "text",
-          "index": false
-        },
-        "transaction_amount": {
-          "type": "float"
-        },
-        "type_description": {
-          "type": "text",
-          "fielddata": true
-        },
-        "funding_toptier_agency_name": {
-          "type": "text",
-          "fielddata": true
+          "fielddata": true,
+          "type": "text"
         },
         "funding_subtier_agency_name": {
-          "type": "text",
-          "fielddata": true
+          "fielddata": true,
+          "type": "text"
         },
-        "recipient_name": {
-          "type": "text",
-          "fielddata": true
+        "funding_toptier_agency_name": {
+          "fielddata": true,
+          "type": "text"
         },
-        "recipient_location_county_code": {
+        "cfda_title": {
           "index": false,
           "type": "text"
         },
-        "awarding_subtier_agency_abbreviation": {
+        "face_value_loan_guarantee": {
+          "scaling_factor": 100,
+          "type": "scaled_float"
+        },
+        "fain": {
+          "index": false,
+          "type": "text"
+        },
+        "piid": {
+          "index": false,
+          "type": "text"
+        },
+        "uri": {
+          "index": false,
+          "type": "text"
+        },
+        "modification_number": {
+          "type": "integer"
+        },
+        "original_loan_subsidy_cost": {
+          "scaling_factor": 100,
+          "type": "scaled_float"
+        },
+        "period_of_performance_current_end_date": {
+          "format": "yyyy-MM-dd",
+          "type": "date"
+        },
+        "period_of_performance_start_date": {
+          "format": "yyyy-MM-dd",
+          "type": "date"
+        },
+        "pop_county_code": {
           "index": false,
           "type": "text"
         },
@@ -80,41 +122,26 @@
           "index": false,
           "type": "text"
         },
-        "cfda_title": {
-          "index": false,
-          "type": "text"
-        },
-        "modification_number": {
-          "type": "integer"
-        },
-        "pop_county_code": {
-          "index": false,
-          "type": "text"
-        },
-        "fain": {
-          "index": false,
-          "type": "text"
-        },
         "recipient_location_congressional_code": {
           "index": false,
           "type": "text"
         },
-        "original_loan_subsidy_cost": {
-          "type": "float"
-        },
-        "face_value_loan_guarantee": {
-          "type": "float"
-        },
-        "piid": {
+        "recipient_location_county_code": {
           "index": false,
           "type": "text"
         },
-        "federal_action_obligation" : {
-          "type": "float"
+        "recipient_name": {
+          "fielddata": true,
+          "type": "text"
         },
-        "update_date" : {
-          "type": "date",
-          "format": "yyyy-MM-dd HH:mm:ss||yyyy-MM-dd||epoch_millis"        }
+        "session_id": {
+          "index": false,
+          "type": "text"
+        },
+        "update_date": {
+          "format": "yyyy-MM-dd HH:mm:ss||yyyy-MM-dd||epoch_millis",
+          "type": "date"
+        }
       }
     }
   }
