Expanded elasticsearch config script. Cleaned up code

--- a/usaspending_api/etl/es_settings.json
+++ b/usaspending_api/etl/es_settings.json
@@ -1,6 +1,11 @@
 {
-	"transient" : {},
-	"persistent": {
-		"action.destructive_requires_name": true
+	"cluster": {
+		"transient" : {},
+		"persistent": {
+			"action.destructive_requires_name": true
+		}
+	},
+	"settings": {
+		"index.max_result_window" : 500000
 	}
 }
