Add new DB to supervisord.conf

--- a/usaspending_api/bulk_download/config/supervisord.conf
+++ b/usaspending_api/bulk_download/config/supervisord.conf
@@ -11,7 +11,8 @@ startretries=10
 user=ec2-user
 environment=
     PYTHONPATH="%(ENV_PATH)s:/data-act/backend",
-    DATABASE_URL="%(ENV_DATABASE_URL_VAR)s"
+    DATABASE_URL="%(ENV_DATABASE_URL_VAR)s",
+    DOWNLOAD_DATABASE_URL="%(ENV_DOWNLOAD_DATABASE_URL_VAR)s"
 command=python3.5 manage.py generate_bulk_zip
 
 [supervisord]
