Added additional code climate config Radon params
Changing threshold might reduce the number of issues reported. Setting python to version 3 may or may not improve the issue reports.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -10,6 +10,9 @@ engines:
         enabled: false
   radon:
     enabled: true
+    config:
+      python_version: 3
+      threshold: "D"
 
 ratings:
   paths:
