--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -1,10 +1,11 @@
 {
   "settings": {
     "index.mapping.ignore_malformed": true,
-    "index.max_result_window": 10000,
+    "index.max_result_window": 50000,
+    "index.refresh_interval": -1,
     "index": {
       "number_of_shards": 5,
-      "number_of_replicas": 1
+      "number_of_replicas": 0
     },
     "analysis": {
         "analyzer": {
