Modified travisfile to test matview sql

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,18 @@ before_script:
 script:
 - flake8
 - pytest --cov=usaspending_api
+- python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dir='temp_sql/'
+- psql $DATABASE_URL -c '\timing' -f temp_sql/universal_transaction_matview.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/universal_award_matview.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_transaction_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_transaction_month_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_transaction_geo_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_award_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view_cfda_number.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view_naics_codes.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view_psc_codes.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view.sql -v ON_ERROR_STOP=1
+
 
 after_success:
 - codeclimate-test-reporter
