--- a/.travis.yml
+++ b/.travis.yml
@@ -21,19 +21,20 @@ before_script:
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
 
 script:
-- flake8
-- pytest --cov=usaspending_api
+# - flake8
+# - pytest --cov=usaspending_api
+- python manage.py migrate
 - python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest='temp_sql/'
-- psql $DATABASE_URL -c '\timing' -f temp_sql/universal_transaction_matview.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/universal_award_matview.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_transaction_view.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_transaction_month_view.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_transaction_geo_view.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_award_view.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view_cfda_number.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view_naics_codes.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view_psc_codes.sql -v ON_ERROR_STOP=1
-- psql $DATABASE_URL -c '\timing' -f temp_sql/summary_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/universal_transaction_matview.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/universal_award_matview.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_transaction_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_transaction_month_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_transaction_geo_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_award_view.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_view_cfda_number.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_view_naics_codes.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_view_psc_codes.sql -v ON_ERROR_STOP=1
+- psql $DATABASE_URL -f temp_sql/summary_view.sql -v ON_ERROR_STOP=1
 
 
 after_success:
