--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
 # - pytest --cov=usaspending_api
 - python manage.py migrate
 - python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest='temp_sql/'
+- psql $DATABASE_URL -f usaspending_api/database_scripts/matviews/functions_and_enums.sql
 - psql $DATABASE_URL -f temp_sql/universal_transaction_matview.sql -v ON_ERROR_STOP=1
 - psql $DATABASE_URL -f temp_sql/universal_award_matview.sql -v ON_ERROR_STOP=1
 - psql $DATABASE_URL -f temp_sql/summary_transaction_view.sql -v ON_ERROR_STOP=1
