--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,14 @@ install:
 
 before_script:
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
+- psql -c "CREATE USER readonly;"
 
 script:
 # - flake8
 # - pytest --cov=usaspending_api
 - python manage.py migrate
-- python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest='temp_sql/'
 - psql $DATABASE_URL -f usaspending_api/database_scripts/matviews/functions_and_enums.sql
+- python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest='temp_sql/'
 - psql $DATABASE_URL -f temp_sql/universal_transaction_matview.sql -v ON_ERROR_STOP=1
 - psql $DATABASE_URL -f temp_sql/universal_award_matview.sql -v ON_ERROR_STOP=1
 - psql $DATABASE_URL -f temp_sql/summary_transaction_view.sql -v ON_ERROR_STOP=1
