--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   global:
   - DATABASE_URL=postgres://postgres@localhost/usaspending_api
   - DJANGO_SETTINGS_MODULE='usaspending_api.settings'
+  - ES_HOSTNAME='http://localhost:9200'
 
 install:
 - pip install -r requirements/requirements.txt
@@ -22,8 +23,8 @@ before_script:
 - psql -c "CREATE USER readonly;"
 
 script:
-# - flake8
-# - pytest --cov=usaspending_api
+- flake8
+- pytest --cov=usaspending_api
 - python manage.py migrate
 - psql $DATABASE_URL -f usaspending_api/database_scripts/matviews/functions_and_enums.sql
 - python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest='temp_sql/'
