update newrelic config

--- a/config/newrelic.ini
+++ b/config/newrelic.ini
@@ -15,6 +15,7 @@ high_security = false
 
 # Transaction Settings
 transaction_tracer.enabled = true
+transaction_events.attributes.enabled = true
 transaction_tracer.transaction_threshold = apdex_f
 transaction_tracer.record_sql = raw
 transaction_tracer.stack_trace_threshold = 0.5
@@ -25,7 +26,6 @@ transaction_events.enabled = true
 
 # Error Settings
 error_collector.enabled = true
-error_collector.ignore_errors =
 error_collector.capture_events = true
 
 # Browser Settings
@@ -43,3 +43,5 @@ custom_insights_events.enabled = true
 utilization.detect_aws = true
 slow_sql.enabled = true
 thread_profiler.enabled = true
+cross_application_tracer.enabled = true
+xray_session.enabled = true
