--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: python
 python:
 - "3.5"
 
-services: postgresql
+services: 
+- postgresql
+- elasticsearch
 
 addons:
   postgresql: "9.6"
@@ -21,10 +23,10 @@ install:
 before_script:
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
 - psql -c "CREATE USER readonly;"
+- sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/' usaspending_api/settings.py
 
 script:
 - flake8
-- pytest --cov=usaspending_api
 - python manage.py migrate
 - psql $DATABASE_URL -f usaspending_api/database_scripts/matviews/functions_and_enums.sql
 - python usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest='temp_sql/'
@@ -38,6 +40,7 @@ script:
 - psql $DATABASE_URL -f temp_sql/summary_view_naics_codes.sql -v ON_ERROR_STOP=1
 - psql $DATABASE_URL -f temp_sql/summary_view_psc_codes.sql -v ON_ERROR_STOP=1
 - psql $DATABASE_URL -f temp_sql/summary_view.sql -v ON_ERROR_STOP=1
+- pytest --cov=usaspending_api
 
 
 after_success:
