--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 
 script:
 - flake8
-- pytest --cov=usaspending_api --local=false
+- pytest --cov=usaspending_api
 
 
 after_success:
