Adding line to supervisord

--- a/usaspending_api/bulk_download/config/supervisord.conf
+++ b/usaspending_api/bulk_download/config/supervisord.conf
@@ -14,6 +14,7 @@ environment=
     DATABASE_URL="%(ENV_DATABASE_URL_VAR)s",
     DOWNLOAD_DATABASE_URL="%(ENV_DOWNLOAD_DATABASE_URL)s"
 command=python3.5 manage.py generate_zip
+logfile=/data-act/backend/usaspending_api/logs/supervisord.log
 
 [supervisord]
 loglevel=debug
