--- a/config/newrelic.ini
+++ b/config/newrelic.ini
@@ -22,6 +22,7 @@ transaction_tracer.explain_enabled = true
 transaction_tracer.explain_threshold = 0.5
 transaction_tracer.function_trace =
 transaction_events.enabled = true
+transaction_events.attributes.enabled = true
 
 # Error Settings
 error_collector.enabled = true
@@ -43,3 +44,5 @@ custom_insights_events.enabled = true
 utilization.detect_aws = true
 slow_sql.enabled = true
 thread_profiler.enabled = true
+cross_application_tracer.enabled = true
+xray_session.enabled = true
