--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 - pip install coveralls
 
 before_script:
-- git clone -b master git@github.com:fedspendingtransparency/data-act-broker-backend.git
+- git clone -b master https://github.com/fedspendingtransparency/data-act-broker-backend.git
 - docker-compose --file data-act-broker-backend/docker-compose.yml run --detach dataact-postgres
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
 - psql -c "CREATE USER readonly;"
