--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
 
 before_script:
 - git clone -b test/docker-postgres-version-update https://github.com/fedspendingtransparency/data-act-broker-backend.git
-- docker-compose --file data-act-broker-backend/docker-compose.yml run --detach dataact-postgres
+- docker-compose --file data-act-broker-backend/docker-compose.yml run -d dataact-postgres
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
 - psql -c "CREATE USER readonly;"
 - sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/' usaspending_api/settings.py
