--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
 - "3.5"
 
 services:
-- docker
 - postgresql
 - elasticsearch
 
@@ -23,8 +22,8 @@ install:
 - pip install coveralls
 
 before_script:
-- git clone -b test/docker-postgres-version-update https://github.com/fedspendingtransparency/data-act-broker-backend.git
-- docker-compose --file data-act-broker-backend/docker-compose.yml run -d dataact-postgres
+- psql -c "CREATE DATABASE data_broker_test;" -U postgres
+- psql -U postgres data_broker_test < broker_schema.dump
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
 - psql -c "CREATE USER readonly;"
 - sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/' usaspending_api/settings.py
