--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 - elasticsearch
 
 addons:
-  postgresql: "9.6"
+  postgresql: "10.3"
 
 env:
   global:
@@ -26,7 +26,7 @@ before_script:
 - psql -c "CREATE DATABASE usaspending_api;" -U postgres
 - psql -c "CREATE USER readonly;"
 - psql -c "CREATE EXTENSION postgres_fdw; CREATE EXTENSION dblink;" -U postgres -d usaspending_api
-- psql -c "CREATE SERVER broker_server FOREIGN DATA WRAPPER postgres_fdw OPTIONS (host 'localhost', port '5432', dbname 'data_broker');" -U postgres -d usaspending_api
+- psql -c "CREATE SERVER broker_server FOREIGN DATA WRAPPER postgres_fdw OPTIONS (host 'localhost', port '5432', dbname 'data_broker_test');" -U postgres -d usaspending_api
 - psql -c "CREATE USER MAPPING FOR postgres SERVER broker_server OPTIONS (user 'postgres');" -U postgres -d usaspending_api
 - sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/' usaspending_api/settings.py
 
