--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -25,7 +25,7 @@ Markdown==2.6.6
 model-mommy==1.6.0
 openpyxl==2.4.7
 pandas==0.23.3
-psycopg2==2.7.5
+psycopg2-binary==2.7.5
 py-gfm==0.1.3
 py==1.5.4
 pytest-cov==2.5.1
