--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .coverage
 .DS_Store
 
+pip-selfcheck.json
+pyvenv.cfg
 log/*
 csv_downloads/*
 tmp/*
@@ -20,3 +22,4 @@ usaspending_api/financial_activities/.idea/*
 .lprof
 .envrc
 .pytest_cache/*
+.python-version
