--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 DJANGO_SETTINGS_MODULE=usaspending_api.settings
 
 [flake8]
-exclude=usaspending_api/*/migrations/*
+exclude=.git,.venv,usaspending_api/*/migrations/*
 max-line-length=120
