changed award_update_id_list to set, added prime_award_type and last_modified_date to subaward_dict, reformatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,4 @@ DJANGO_SETTINGS_MODULE=usaspending_api.settings
 [flake8]
 exclude=.venv,usaspending_api/*/migrations/*
 max-line-length=120
+ignore=W503,E203
