--- a/dredd.yml
+++ b/dredd.yml
@@ -30,5 +30,5 @@ hooks-worker-term-retry: 500
 hooks-worker-handler-host: 127.0.0.1
 hooks-worker-handler-port: 61321
 config: ./dredd.yml
-blueprint: usaspending_api/api_contracts/contracts/**/**.md
-endpoint: 'http://127.0.0.1:3000'
+blueprint: usaspending_api/api_contracts/contracts/**/*.md
+endpoint: 'http://127.0.0.1:8000'
