--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,37 @@
 language: python
+
 python:
   - '3.5'
+
 services:
   - postgresql
   - elasticsearch
+
 addons:
-  postgresql: '9.6'
+  postgresql: '10.3'
+
 env:
   global:
     - DATABASE_URL='postgres://postgres@localhost/usaspending_api'
     - DJANGO_SETTINGS_MODULE='usaspending_api.settings'
     - ES_HOSTNAME='http://localhost:9200'
+    - FUNCS_AND_ENUMS='usaspending_api/database_scripts/matviews/functions_and_enums.sql'
+    - MATVIEW_GEN='usaspending_api/database_scripts/matview_generator/matview_sql_generator.py'
+
 before_install:
   - npm install dredd@5.4.1 --global
+
 install:
   - pip install -r requirements/requirements.txt
   - pip install coveralls
+
 before_script:
   - psql -c "CREATE DATABASE usaspending_api;" -U postgres
   - psql -c "CREATE USER readonly;"
-  - >-
-    sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/'
-    usaspending_api/settings.py
-  - dredd
-script:
-  - flake8
-  - pytest --cov=usaspending_api
+  - sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/' usaspending_api/settings.py
+  - python $MATVIEW_GEN --dest='temp_sql/' --quiet
   - python manage.py migrate
-  - >-
-    psql $DATABASE_URL -f
-    usaspending_api/database_scripts/matviews/functions_and_enums.sql -v
-    ON_ERROR_STOP=1 --quiet
-  - >-
-    python
-    usaspending_api/database_scripts/matview_generator/matview_sql_generator.py
-    --dest='temp_sql/' --quiet
+  - psql $DATABASE_URL -f $FUNCS_AND_ENUMS -v ON_ERROR_STOP=1 --quiet
   - psql $DATABASE_URL -f temp_sql/subaward_view.sql -v ON_ERROR_STOP=1 --quiet
   - psql $DATABASE_URL -f temp_sql/summary_award_view.sql -v ON_ERROR_STOP=1 --quiet
   - psql $DATABASE_URL -f temp_sql/summary_state_view.sql -v ON_ERROR_STOP=1 --quiet
@@ -49,5 +46,11 @@ script:
   - psql $DATABASE_URL -f temp_sql/summary_view_psc_codes.sql -v ON_ERROR_STOP=1 --quiet
   - psql $DATABASE_URL -f temp_sql/universal_award_matview.sql -v ON_ERROR_STOP=1 --quiet
   - psql $DATABASE_URL -f temp_sql/universal_transaction_matview.sql -v ON_ERROR_STOP=1 --quiet
+
+script:
+  - flake8
+  - pytest --cov=usaspending_api
+  - dredd
+
 after_success:
   - codeclimate-test-reporter
