--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE=usaspending_api.settings
+addopts=--cov=usaspending_api
 
 [flake8]
 exclude=.venv,usaspending_api/*/migrations/*
