--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
-boto3==1.9.110
-botocore==1.12.110
+attrs==19.1.0
+boto3==1.9.116
+botocore==1.12.116
 coverage==4.5.3
 dj-database-url==0.5.0
 django-cors-headers==1.2.2
@@ -36,7 +37,6 @@ pytz==2016.6.1
 requests==2.20.0
 retrying==1.3.3
 six==1.10.0
-smart_open==1.5.5
 unicodecsv==0.14.1
 urllib3==1.24.1
 xlrd==1.0.0
