--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 attrs==19.1.0
 boto3==1.9.116
 botocore==1.12.116
+codeclimate-test-reporter==0.2.3
 coverage==4.5.3
 dj-database-url==0.5.0
 django-cors-headers==1.2.2
