--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,6 @@ install:
   - pip install coveralls
 
 before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
   - psql -c "CREATE DATABASE usaspending_api;" -U postgres
   - psql -c "CREATE USER readonly;"
   - sed -i 's/ES_HOSTNAME = ""/ES_HOSTNAME = os.environ.get("ES_HOSTNAME")/' usaspending_api/settings.py
@@ -56,5 +53,4 @@ script:
   # - dredd  (Disable dredd until test data is loaded into DB for API responses)
 
 after_success:
-  # - codeclimate-test-reporter
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - codeclimate-test-reporter
