Using fewer, larger download files to ETL, added new field Last Date to Order

--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -118,6 +118,10 @@
           "format": "yyyy-MM-dd",
           "index": false
         },
+        "ordering_period_end_date": {
+          "type": "date",
+          "format": "yyyy-MM-dd"
+        },
         "transaction_fiscal_year": {
           "type": "integer",
           "index": false
