--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,8 @@ services:
       - 8000:8000
     entrypoint: ["python", "/dockermount/docker_django_management.py"]
     command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
-    links:
-      - db
     environment:
-      - DDM_IS_RUNNING_IN_DOCKER=yup
-      - DATABASE_URL=postgres://usaspender@db/usaspending
-      - DDM_HOST_USER=usaspender
-      - PYTHONUNBUFFERED=yup
-  db:
-    image: postgres:10.3
-    volumes:
-      - pgdata:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_DB=usaspending
-      - POSTGRES_USER=usaspender
-volumes:
-  pgdata:
+      - DDM_IS_RUNNING_IN_DOCKER=0
+      - DATABASE_URL=postgres://usaspending:usaspender@host.docker.internal:5432/usaspending_db
+      - DDM_HOST_USER=usaspending
+      - PYTHONUNBUFFERED=0
