--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3.7'
+
 services:
-  db:
+
+  usaspending-db:
     container_name: usaspending-db
     image: postgres:10.6-alpine
     volumes:
       - type: bind
-        source: ${POSTGRES_DIRECTORY} 
+        source: ${POSTGRES_CLUSTER_DIR}
         target: /var/lib/postgresql/data
     restart: on-failure:3 # Will attempt to start the db 3 times
     ports:
@@ -14,26 +16,44 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: data_store_api
-  app:
+
+  usaspending-db-migrate:
     build: .
-    depends_on:
-     - db
+    volumes:
+     - .:/dockermount
+    command: /bin/sh -c "python -u manage.py migrate"
+    environment:
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@usaspending-db:5432/data_store_api
+
+  usaspending-db-sql:
+    build: .
+    volumes:
+     - .:/dockermount
+    command: >
+      /bin/sh -c "mkdir $$MATVIEW_SQL_DIR &&
+      python -u usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest=$$MATVIEW_SQL_DIR"
+    environment:
+      MATVIEW_SQL_DIR: ${MATVIEW_SQL_DIR}
+
+  usaspending-db-init:
+    image: postgres:10.6-alpine
+    volumes:
+     - .:/dockermount
+    command: >
+      /bin/sh -c "cd /dockermount &&
+      psql $$DATABASE_URL -c 'CREATE ROLE readonly' || true &&
+      psql $$DATABASE_URL -f usaspending_api/database_scripts/matviews/functions_and_enums.sql &&
+      cat $$MATVIEW_SQL_DIR/*.sql | psql $$DATABASE_URL -f -"
+    environment:
+      MATVIEW_SQL_DIR: ${MATVIEW_SQL_DIR}
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@usaspending-db:5432/data_store_api
+
+  usaspending-api:
+    build: .
     volumes:
       - .:/dockermount
     ports:
       - 8000:8000
-    command: /bin/sh -c "sleep 20s; python manage.py runserver 0.0.0.0:8000"
+    command: /bin/sh -c "python -u manage.py runserver 0.0.0.0:8000"
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@usaspending-db:5432/data_store_api
-      PYTHONUNBUFFERED: ${PYTHONUNBUFFERED}
-  migrate:
-    build: .
-    depends_on:
-      - db
-      - app
-    volumes:
-     - .:/dockermount
-    command: /bin/sh -c "sleep 15s; python manage.py migrate"
-    environment:
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@usaspending-db:5432/data_store_api
-      PYTHONUNBUFFERED: ${PYTHONUNBUFFERED}
