add compose command for ref_data, clarify --build

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@
 POSTGRES_USER=usaspending
 POSTGRES_PASSWORD=usaspender
 
+## Change to host.docker.internal:<port> if you are running a local Postgres. Otherwise leave as-is, so
+## Docker will use the Postgres created by Compose.
+POSTGRES_HOST_PORT=usaspending-db:5432
+
 # Both of these directories should go *outside* of the root repo, or they will be mounted w/Docker
 POSTGRES_CLUSTER_DIR=../docker_db
 MATVIEW_SQL_DIR=../matview_sql
