--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ POSTGRES_PASSWORD=usaspender
 ## Change to host.docker.internal if you are running a local Postgres. Otherwise leave as-is, so
 ## Docker will use the Postgres created by Compose.
 POSTGRES_HOST=usaspending-db
-POSTGRES_PORT=5430
+POSTGRES_PORT=5432
 
 # Both of these directories should go *outside* of the root repo, or they will be mounted w/Docker
 POSTGRES_CLUSTER_DIR=../docker_db
-MATVIEW_SQL_DIR=../matview_sql
+MATVIEW_SQL_DIR=matview_sql
