--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ POSTGRES_PASSWORD=usaspender
 POSTGRES_HOST=usaspending-db
 POSTGRES_PORT=5432
 
-# Both of these directories should go *outside* of the root repo, or they will be mounted w/Docker
+# POSTGRES_CLUSTER_DIR should point to a path outside, or it will be mounted w/Docker
 POSTGRES_CLUSTER_DIR=../docker_db
+
+# MATVIEW_SQL_DIR has to be inside of the project (check the docker-compose file)
 MATVIEW_SQL_DIR=matview_sql
