--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,5 @@ addopts=--cov=usaspending_api
 [flake8]
 exclude=.venv,usaspending_api/*/migrations/*
 max-line-length=120
+per-file-ignores=
+    */models/__init__.py:F401
