--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,10 @@ exclude=.venv,usaspending_api/*/migrations/*
 max-line-length=120
 per-file-ignores=
     */models/__init__.py:F401
+
+[coverage:run]
+omit =
+    # tests themselves don't need coverage measurements
+    */tests/*
+    # nor db migration scripts
+*/migrations/*
