--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -235,8 +235,19 @@
           "type": "text"
         },
         "pop_congressional_code": {
+          "type": "text"
+        },
+        "pop_city_name": {
           "type": "text",
-          "index": false
+          "fields": {
+            "suggest": {
+              "max_input_length": 50,
+              "analyzer": "simple",
+              "preserve_position_increments": true,
+              "type": "completion",
+              "preserve_separators": true
+            }
+          }
         },
 
         "recipient_location_country_code": {
@@ -261,8 +272,19 @@
           "type": "text"
         },
         "recipient_location_congressional_code": {
+          "type": "text"
+        },
+        "recipient_location_city_name": {
           "type": "text",
-          "index": false
+          "fields": {
+            "suggest": {
+              "max_input_length": 50,
+              "analyzer": "simple",
+              "preserve_position_increments": true,
+              "type": "completion",
+              "preserve_separators": true
+            }
+          }
         },
         "type": {
           "type": "keyword",
