--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -235,17 +235,7 @@
           "type": "text"
         },
         "pop_city_name": {
-          "type": "text",
-          "fields": {
-            "suggest": {
-              "max_input_length": 50,
-              "analyzer": "simple",
-              "preserve_position_increments": true,
-              "type": "completion",
-              "preserve_separators": true
-            }
-          }
-
+          "type": "text"
         },
 
         "recipient_location_country_code": {
@@ -270,18 +260,7 @@
           "type": "text"
         },
         "recipient_location_city_name": {
-
-          "type": "text",
-          "fields": {
-            "suggest": {
-              "max_input_length": 50,
-              "analyzer": "simple",
-              "preserve_position_increments": true,
-              "type": "completion",
-              "preserve_separators": true
-            }
-          }
-
+          "type": "text"
         },
         "type": {
           "type": "keyword",
