--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -38,6 +38,7 @@ pytz==2016.6.1
 requests==2.20.0
 retrying==1.3.3
 six==1.10.0
+supervisor==4.0.2
 unicodecsv==0.14.1
 urllib3==1.24.2
 xlrd==1.0.0
