--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -220,7 +220,7 @@
           "type": "text"
         },
         "pop_state_code": {
-          "type": "text"
+          "type": "keyword"
         },
         "pop_county_code": {
           "type": "text"
@@ -235,7 +235,12 @@
           "type": "text"
         },
         "pop_city_name": {
-          "type": "text"
+          "type": "text",
+          "fields": {
+            "keyword": {
+              "type": "keyword"
+            }
+          }
         },
 
         "recipient_location_country_code": {
@@ -245,7 +250,7 @@
           "type": "text"
         },
         "recipient_location_state_code": {
-          "type": "text"
+          "type": "keyword"
         },
         "recipient_location_county_code": {
           "type": "text"
@@ -260,7 +265,12 @@
           "type": "text"
         },
         "recipient_location_city_name": {
-          "type": "text"
+          "type": "text",
+          "fields": {
+            "keyword": {
+              "type": "keyword"
+            }
+          }
         },
         "type": {
           "type": "keyword",
