--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -220,7 +220,7 @@
           "type": "text"
         },
         "pop_state_code": {
-          "type": "keyword"
+          "type": "text"
         },
         "pop_county_code": {
           "type": "text"
@@ -235,12 +235,7 @@
           "type": "text"
         },
         "pop_city_name": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword"
-            }
-          }
+          "type": "text"
         },
 
         "recipient_location_country_code": {
@@ -250,7 +245,7 @@
           "type": "text"
         },
         "recipient_location_state_code": {
-          "type": "keyword"
+          "type": "text"
         },
         "recipient_location_county_code": {
           "type": "text"
@@ -265,12 +260,7 @@
           "type": "text"
         },
         "recipient_location_city_name": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword"
-            }
-          }
+          "type": "text"
         },
         "type": {
           "type": "keyword",
