--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 attrs==19.1.0
 boto3==1.9.116
 botocore==1.12.116
+certifi==2019.3.9
 codeclimate-test-reporter==0.2.3
 coverage==4.3.4
 dj-database-url==0.5.0
