--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE=usaspending_api.settings
-addopts=--cov=usaspending_api usaspending_api/tests/
+addopts=--cov=usaspending_api
 
 [flake8]
 exclude=.venv,usaspending_api/*/migrations/*
