--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
   - '3.5'
 
 services:
-  - docker
   - postgresql
 
 addons:
@@ -24,9 +23,7 @@ install:
   - pip install coveralls
 
 before_script:
-  - docker pull docker.elastic.co/elasticsearch/elasticsearch:6.1.1
-  - docker run -d -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:6.1.1
-  # - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.1.1.deb && sudo dpkg -i --force-confnew elasticsearch-6.1.1.deb && sudo service elasticsearch restart
+  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.1.1.deb && sudo dpkg -i --force-confnew elasticsearch-6.1.1.deb && sudo service elasticsearch restart
   - psql -c "CREATE DATABASE usaspending_api;" -U postgres
   - psql -c "CREATE USER readonly;"
   - python manage.py migrate
