Allowing connections to a local, or locally-tunneled elasticsearch cluster from within local docker

--- a/.env
+++ b/.env
@@ -13,3 +13,8 @@ POSTGRES_CLUSTER_DIR=../docker_db
 
 # MATVIEW_SQL_DIR has to be inside of the project (check the docker-compose file)
 MATVIEW_SQL_DIR=matview_sql
+
+# Host of an your elasticsearch cluster node
+# Defaulted to a cluster running on localhost (resolvable from within docker by host.docker.internal) until
+# elasticsearch is incorporated in this compose file
+ES_HOSTNAME=https://host.docker.internal:9200
