added tests, rearranged if statements

--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -214,7 +214,7 @@
           "index": false
         },
         "pop_country_code": {
-          "type": "text"
+          "type": "keyword"
         },
         "pop_country_name": {
           "type": "text"
@@ -244,7 +244,7 @@
         },
 
         "recipient_location_country_code": {
-          "type": "text"
+          "type": "keyword"
         },
         "recipient_location_country_name": {
           "type": "text"
