--- a/usaspending_api/etl/es_transaction_mapping.json
+++ b/usaspending_api/etl/es_transaction_mapping.json
@@ -214,7 +214,12 @@
           "index": false
         },
         "pop_country_code": {
-          "type": "keyword"
+          "type": "text",
+          "fields": {
+            "keyword": {
+              "type": "keyword"
+            }
+          }
         },
         "pop_country_name": {
           "type": "text"
@@ -244,7 +249,12 @@
         },
 
         "recipient_location_country_code": {
-          "type": "keyword"
+          "type": "text",
+          "fields": {
+            "keyword": {
+              "type": "keyword"
+            }
+          }
         },
         "recipient_location_country_name": {
           "type": "text"
