--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,3 +66,27 @@ services:
     command: /bin/sh -c "python -u manage.py runserver 0.0.0.0:8000"
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/data_store_api
+      ES_HOSTNAME: ${ES_HOSTNAME}
+
+  usaspending-es:
+    hostname: es-node-1
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
+    container_name: es-node-1
+    environment:
+    - cluster.name=usaspending
+    - network.host=0.0.0.0
+    - node.name=es-node-1
+    - bootstrap.memory_lock=true
+    - "ES_JAVA_OPTS=-Xms1536m -Xmx1536m"
+    - "discovery.zen.ping.unicast.hosts=es-node-1"
+    - discovery.zen.minimum_master_nodes=1
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+    - type: bind
+      source: ${ES_CLUSTER_DIR}
+      target: /usr/share/elasticsearch/data
+    ports:
+    - 9200:9200
