--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,13 +25,19 @@ services:
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/data_store_api
 
-  usaspending-db-sql:
+  usaspending-db-sql-directory-setup:
     build: .
     volumes:
      - .:/dockermount
-    command: >
-      /bin/sh -c "mkdir $$MATVIEW_SQL_DIR &&
-      python -u usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest=$$MATVIEW_SQL_DIR"
+    command: /bin/sh -c "mkdir $$MATVIEW_SQL_DIR "
+    environment:
+      MATVIEW_SQL_DIR: ${MATVIEW_SQL_DIR}
+
+  usaspending-db-sql-generate:
+    build: .
+    volumes:
+     - .:/dockermount
+    command: /bin/sh -c "python -u usaspending_api/database_scripts/matview_generator/matview_sql_generator.py --dest=$$MATVIEW_SQL_DIR"
     environment:
       MATVIEW_SQL_DIR: ${MATVIEW_SQL_DIR}
 
